# mikobot

./: .gitignore  Dockerfile  README.md  config.py  extensions.py  init.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
bot/: __init__.py  __main__.py  config.py  miko.py
bot/api/: get_games.py  post_log.py
bot/commands/: config.py
bot/commands/client/: __init__.py  commands.py
bot/commands/games/: commands.py
bot/commands/games/lets_play/: __init__.py  initialize.py
bot/events/: __init__.py  event_listener.py  on_automod.py  on_client.py  on_entitlement.py  on_guild.py  on_integration.py  on_interaction.py  on_invite.py  on_member.py  on_message.py  on_poll.py  on_presence.py  on_private_channel.py  on_raw.py  on_reaction.py  on_scheduled_event.py  on_soundboard.py  on_stage.py  on_thread.py  on_user.py  on_voice.py
bot/interactions/: __init__.py  interaction_handler.py
bot/utils/event_utils/: __init__.py
bot/utils/event_utils/on_client/: __init__.py  load_extensions.py  load_opus.py
bot/utils/event_utils/on_message/: __init__.py  (+1 more)
database/: data-setup.sql  schema.sql
database/connection/: __init__.py  connection.py
routes/pages/: blueprint.py
routes/pages/auth/: blueprint.py
routes/pages/dashboard/: blueprint.py
static/scripts/dashboard/: download-logs.js  start-bot.js  stop-bot.js  terminal.js
static/styles/: dashboard.css  global.css  login.css
templates/: dashboard.html.jinja  dashboard.tokens.html.jinja  dashboard.users.html.jinja  login.html.jinja
test/: test_api.py
utils/: send_email.py
(+19 files in other folders)
