[tool.poetry]
name = "mikotools-bot"
version = "0.1.0"
description = "The official bot for miktools"
authors = ["Void <mail@voideuw.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
discord = "^2.3.2"
python-dotenv = "^1.1.0"
flask = "^3.1.1"
flask-httpauth = "^4.8.0"
audioop-lts = "^0.2.1"
pynacl = "^1.5.0"
requests = "^2.32.3"
pyjwt = "^2.10.1"
flask-cors = "^6.0.0"
flask-socketio = "^5.5.1"
eventlet = "^0.40.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
